--- a/k3s-deployment.yaml
+++ b/k3s-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: msg-app
-          image: caangeenbrug-fv/msg-app:latest
+          image: caangeenbrug-fv/msg-app:0.0.3
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
