--- a/k3s-deployment.yaml
+++ b/k3s-deployment.yaml
@@ -14,10 +14,15 @@ spec:
     spec:
       containers:
         - name: msg-app
-          image: caangeenbrug-fv/msg-app:0.0.3
+          image: caangeenbrug-fv/msg-app:0.0.5
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
+          env:
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
 ---
 apiVersion: v1
 kind: Service
@@ -25,6 +30,18 @@ metadata:
   name: msg-app
 spec:
   type: ClusterIP
+  selector:
+    app: msg-app
+  ports:
+    - port: 80
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: msg-app-headless
+spec:
+  clusterIP: None
   selector:
     app: msg-app
   ports:
