--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: msg-app
-          image: caangeenbrug-fv/msg-app:0.0.14
+          image: flikweertvision/msg-app-excercise:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
