--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: msg-app
-          image: flikweertvision/msg-app-excercise:latest
+          image: flikweertvision/msg-app-excercise:0.0.14
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
