--- a/local-deployment.yaml
+++ b/local-deployment.yaml
@@ -72,21 +72,17 @@ roleRef:
   kind: Role
   name: reader-role
   apiGroup: rbac.authorization.k8s.io
-### TODO: Traefik
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: ingress
-# spec:
-#   rules:
-#     - host: casperflikweert.net
-#       http:
-#         paths:
-#           - path: /msg-app
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: msg-app-service
-#                 port:
-#                   number: 80
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: msg-app-route
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`messaging-app-exercise.localhost`)
+      kind: Rule
+      services:
+        - name: msg-app-software-service
+          port: 80
